--- a/Gastos.Pwa/Components/_Imports.razor
+++ b/Gastos.Pwa/Components/_Imports.razor
@@ -1,14 +1,17 @@
-﻿@using System.Net.Http
+@using System.Net.Http
 @using System.Net.Http.Json
+@using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
+@using Microsoft.AspNetCore.Components.WebAssembly.Authentication
 @using Microsoft.JSInterop
 @using Gastos.Pwa
 @using Gastos.Pwa.Components
 @using Gastos.Pwa.Components.Layout
 @using Gastos.Pwa.Components.Pages
+@using Gastos.Shared.Entities.Request
+@using Gastos.Shared.Extensions
 @using MudBlazor
-@using Gastos.Shared.Entities.Request;
