--- a/Gastos.Pwa/Components/_Imports.razor
+++ b/Gastos.Pwa/Components/_Imports.razor
@@ -7,11 +7,36 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.AspNetCore.Components.WebAssembly.Authentication
+
 @using Microsoft.JSInterop
+
+@using MudBlazor 
+@using MudBlazor.Services
+
+@using DocIntel.Api.Sdk
+@using DocIntel.Contracts.Requests
+@using DocIntel.Contracts.Requests.Common
+@using DocIntel.Contracts.Responses
+@using DocIntel.Contracts.Responses.Common
+
 @using Gastos.Pwa
 @using Gastos.Pwa.Components
+@using Gastos.Pwa.Components.Features.AnalysisJobs
+@using Gastos.Pwa.Components.Features.Products
+@using Gastos.Pwa.Components.Features.Receipts
+@using Gastos.Pwa.Components.Features.Stats
+@using Gastos.Pwa.Components.Features.Stores
 @using Gastos.Pwa.Components.Layout
 @using Gastos.Pwa.Components.Pages
+@using Gastos.Pwa.Components.Shared
+@using Gastos.Pwa.Components.Shared.Table
+@using Gastos.Pwa.Shared.Extensions
+@using Gastos.Pwa.Shared.Services
+
+@using Gastos.Shared.Entities
 @using Gastos.Shared.Entities.Request
 @using Gastos.Shared.Extensions
-@using MudBlazor
+@using Gastos.Shared.Resources
+@using RS = Gastos.Shared.Resources.ResourceStrings
+@using Gastos.Shared.Validators
+
