auth0 bearer handler

--- a/Gastos.Pwa/Components/Layout/MainLayout.razor
+++ b/Gastos.Pwa/Components/Layout/MainLayout.razor
@@ -67,17 +67,15 @@
         StateHasChanged();
     }
 
-    private const string LightPrimary = "#607D8B";
-
     private readonly PaletteLight _lightPalette = new()
     {
         Primary = Colors.BlueGray.Default,
-        AppbarText = Colors.BlueGray.Lighten5,//"#424242",
+        AppbarText = Colors.BlueGray.Lighten5,
         AppbarBackground = Colors.BlueGray.Default,
         DrawerBackground = Colors.BlueGray.Default,
         DrawerIcon = Colors.BlueGray.Lighten5,
         DrawerText = Colors.BlueGray.Lighten5,
-        Background = Colors.BlueGray.Lighten5,// "#E0E0E0",
+        Background = Colors.BlueGray.Lighten5,
         Black = "#110e2d",
         GrayLight = "#e8e8e8",
         GrayLighter = "#f9f9f9"
