--- a/Gastos.Pwa/Components/Pages/Home.razor
+++ b/Gastos.Pwa/Components/Pages/Home.razor
@@ -28,7 +28,7 @@
                     <div style="text-align:center">
                         <MudIcon Icon="@Icons.Material.Filled.ReceiptLong" Size="Size.Large" Color="Color.Primary" />
                         <MudText Typo="Typo.h6">@Loc.Get(RS.EntityReceipts)</MudText>
-                        <MudText Typo="Typo.body2">@(string.Format(Loc.Get(RS.InfoProducts0), Loc.Get(RS.EntityReceipts)))</MudText>
+                        <MudText Typo="Typo.body2">@(string.Format(Loc.Get(RS.InfoReceipts0), Loc.Get(RS.EntityReceipts)))</MudText>
                     </div>
                 </MudCardContent>
                 <MudCardActions>
