--- a/Gastos.Pwa/Components/Features/Stores/StoresCrud.razor
+++ b/Gastos.Pwa/Components/Features/Stores/StoresCrud.razor
@@ -4,6 +4,7 @@
 @inject StateContainer StateContainer
 @inject BlazorService BlazorService
 @inject LocalizationService Loc
+@inject AuthenticationStateProvider provider
 
 
 <Alert Message="@_errorMessage" />
@@ -32,10 +33,17 @@
     private bool _allowRemove = false;
     private Guid _selectedStoreId = Guid.Empty;
     private string[] _columns = null!;
+    private string _currentUserId = "";
 
     protected override void OnInitialized()
     {
         _columns = new[] { "", Loc.Get(RS.FieldReceiptDescription), "" };
+    }
+
+    protected override async Task OnInitializedAsync()
+    {
+        var authState = await provider.GetAuthenticationStateAsync();
+        _currentUserId = authState.User.GetUserId();
     }
 
     private async Task<TableData<StoreDto>> ServerReload(TableState state, CancellationToken token)
@@ -49,14 +57,22 @@
         var response = await StoreApi.GetAllAsync(_parameters, token);
         if (response.IsSuccessStatusCode && response.Content is ApiPagedResponse<StoreDto> pagedResponse)
         {
-            output.Items = pagedResponse.Items;
-            output.TotalItems = pagedResponse.TotalItems;
-            StateHasChanged();
+            if (pagedResponse.UserId != _currentUserId)
+            {
+                _errorMessage = Loc.Get(RS.ErrorUserMismatch);
+            }
+            else
+            {
+                output.Items = pagedResponse.Items;
+                output.TotalItems = pagedResponse.TotalItems;
+            }
         }
         else
         {
             _errorMessage = BlazorService.GetResponseError(response);
         }
+
+        StateHasChanged();
 
         return output;
     }
