ajustes menu móvil

--- a/Gastos.Pwa/Components/Layout/Menu.razor
+++ b/Gastos.Pwa/Components/Layout/Menu.razor
@@ -20,7 +20,7 @@
 }
 else if (MenuType == "superior")
 {
-    <MudMenu Variant="Variant.Text" Size="Size.Medium" Color="Color.Inherit" Icon="@Icons.Material.TwoTone.MoreVert">
+    <MudMenu Variant="Variant.Text" Size="Size.Medium" Color="Color.Inherit" Icon="@Icons.Material.TwoTone.Menu">
         @foreach (var item in MenuItems)
         {
             @if (item.IsDivider)
