--- a/Gastos.Pwa/Components/Shared/Table/TableCrud.razor
+++ b/Gastos.Pwa/Components/Shared/Table/TableCrud.razor
@@ -1,9 +1,11 @@
 @typeparam TEntity
 
+@inject StateContainer StateContainer
+
 <MudTable T="TEntity" ServerData="ServerReload" @ref="table"
           OnRowClick="RowClickEvent" RowClassFunc="SelectedRowClassFunc"
           RowClass="cursor-pointer" Breakpoint="Breakpoint.None"
-          Hover Dense Class="bg-primary" Style="--bs-bg-opacity: 0.1;">
+          Hover Dense Class="bg-primary" Style="--bs-bg-opacity: 0.1; ">
     <ToolBarContent>
         <MudSpacer />
         <TableSearch SearchStringValue="@SearchStringValue" OnSearchStringChanged="@OnSearchStringChanged" />
@@ -11,7 +13,7 @@
         @if (ShowDateRange)
         {
             <TableDateRange FromDate="@FromDate" DateStartChanged="@DateStartChanged" DateStartHelperText="@DateStartHelperText"
-                       ToDate="@ToDate" DateEndChanged="@DateEndChanged" DateEndHelperText="@DateEndHelperText" />
+                        ToDate="@ToDate" DateEndChanged="@DateEndChanged" DateEndHelperText="@DateEndHelperText" />
             <MudSpacer />
         }
         <TableButton Action="@TableAction.Add" OnClick="@OnAddClick" />
