--- a/Gastos.Pwa/Components/Shared/Table/TableSearch.razor
+++ b/Gastos.Pwa/Components/Shared/Table/TableSearch.razor
@@ -8,7 +8,7 @@
               Placeholder="@Loc.Get(RS.TableSearch)"
               Clearable="true" Immediate="true" DebounceInterval="500" AutoFocus="@StateContainer.IsNotMobile"
               Adornment="Adornment.Start" AdornmentIcon="@Icons.Material.Filled.Search"
-              IconSize="Size.Medium" Class="mt-0">
+              IconSize="Size.Medium" Class="mt-4 me-2">
 </MudTextField>
 
 @code {
