--- a/Gastos.Pwa/Components/Layout/ConfigSelector.razor
+++ b/Gastos.Pwa/Components/Layout/ConfigSelector.razor
@@ -27,6 +27,9 @@
             }
         </MudMenu>
 
+        <MudNavLink Href="/pwa-settings" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.AppSettingsAlt">
+            <MudText>Configuración PWA</MudText>
+        </MudNavLink>
     </ChildContent>
 </MudMenu>
 
