--- a/Gastos.Pwa/Components/Layout/Menu.razor
+++ b/Gastos.Pwa/Components/Layout/Menu.razor
@@ -61,7 +61,7 @@ else if (MenuType == "superior")
     {
         CreateNavLink("/", Icons.Material.Filled.Home, @Loc.Get(RS.Home), NavLinkMatch.All);
         CreateDivider();
-        CreateNavLink("ticket-reading", Icons.Material.Filled.ReadMore, string.Format(Loc.Get(RS.Reading0), Loc.Get(RS.EntityReceipts)));
+        CreateNavLink("receipts-reader", Icons.Material.Filled.ReadMore, string.Format(Loc.Get(RS.Reading0), Loc.Get(RS.EntityReceipts)));
         CreateDivider();
         CreateNavLink("receipts", Icons.Material.Filled.ReceiptLong, @Loc.Get(RS.EntityReceipts));
         CreateNavLink("products", Icons.Material.Filled.Article, @Loc.Get(RS.EntityProducts));
