--- a/Gastos.Pwa/Components/Pages/HomePage.razor
+++ b/Gastos.Pwa/Components/Pages/HomePage.razor
@@ -28,7 +28,7 @@
 
     <MudGrid Class="mt-5">
         <MudItem xs="12" sm="6" md="2">
-            <MenuCard Href="/ticket-reading" Color="Color.Success" Icon="@Icons.Material.Filled.ReadMore"
+            <MenuCard Href="/receipts-reader" Color="Color.Success" Icon="@Icons.Material.Filled.ReadMore"
                       Title="@(string.Format(Loc.Get(RS.Reading0), Loc.Get(RS.EntityReceipts)))" 
                       Description="@Loc.Get(RS.InfoReadingReceipts)" />
         </MudItem>
